@@ -1,7 +1,1 @@
-<html><body>
-The default behavior of the <b>C+LEFT</b> and <b>C+RIGHT</b> commands is to
-stop both at the beginning and the end of each word. However this can be
-changed by remapping these keystrokes to alternative actions whose names end
-with <b>(Eat Whitespace)</b> in the <b>Shortcuts</b> pane of the
-<b>Utilities</b>&gt;<b>Global Options</b> dialog box.
-</body></html>
+<html><body>You can use the favorites feature for quick access to frequently used files and directories. Look in the <b>Utilities</b>&gt;<b>Favorites</b> menu in jEdit's menu bar, or the <b>Favorites</b> menu in the file system browser.</body></html>
