@@ -1,2 +1,3 @@
-<html><body>Press <b>A+.</b> to list all
-occurrences of the word under the caret.</body></html>
+<html><body>To select a fold, <b>Control</b>-click the
+fold indicator in the gutter. To narrow the display to a fold, <b>Alt</b>-click the fold indicator in the gutter.
+</body></html>
