@@ -4,7 +4,7 @@ when you need to jump around between different parts of a buffer.<p>
 
 By default, the search bar is only shown when
 one of the quick search commands are invoked; however you can specify that it
-always be shown in the <b>General</b> pane of the <b>Utilities</b>&gt;<b>Global
+always be shown in the <b>View</b> pane of the <b>Utilities</b>&gt;<b>Global
 Options</b> dialog box.<p>
 
 The following keyboard commands deal with the search bar; you will find it
